--- a/tools/simplytrain/static/css/index.css
+++ b/tools/simplytrain/static/css/index.css
@@ -44,6 +44,11 @@ body {
     border-radius: 25px;
 
     background: #222;
+
+    display: flex;
+
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .setButton {
@@ -79,4 +84,45 @@ body {
     flex-direction: row;
 
     justify-content: flex-start;
+}
+
+
+#startButton {
+    padding: 2vw 1vh;
+
+    border-radius: 4vh;
+    border-width: 0;
+
+    background: #333;
+
+    color: white;
+    font-size: 3em;
+}
+
+#startButton:hover {
+    transition-duration: .2s;
+    scale: 105%;
+    background: #464;
+}
+
+#startButton:active {
+    transition-duration: .1s;
+    scale: 110%;
+    background: #5a5;
+}
+
+
+.optionsHolder {
+
+}
+
+.swapthingyBox {
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+.swapthingy {
+    font-size: 1.5em;
+    color: white;
 }
