--- a/tools/simplytrain/static/css/index.css
+++ b/tools/simplytrain/static/css/index.css
@@ -126,3 +126,14 @@ body {
     font-size: 1.5em;
     color: white;
 }
+
+
+@media (max-aspect-ratio: 1/1) {
+    body {
+        flex-direction: column;
+    }
+
+    .checkLabel {
+
+    }
+}
