--- a/tools/simplytrain/templates/vocabulary.html
+++ b/tools/simplytrain/templates/vocabulary.html
@@ -33,11 +33,14 @@
                     console.log(data);
                     let out = ``
                     for (const i in data) {
+                        console.log({{swapflag}});
+                        const correctleft = ({{swapflag}} ? data[i].langb.correct : data[i].langa.correct);
+                        const correctright = ({{swapflag}} ? data[i].langa.correct : data[i].langb.correct);
                         out += `
                             <div class=wordLine>
-                                <label class="word" id="${i}a">${data[i].langa.correct}</label>
+                                <label class="word" id="${i}a">${correctleft}</label>
                                 <div style="height: 100%; width: 2px; background: #666"></div>
-                                <button class="word bside" id="${i}b" onclick=toggleButtonHide("${i}b")>${data[i].langb.correct}</button>
+                                <button class="word bside" id="${i}b" onclick=toggleButtonHide("${i}b")>${correctright}</button>
                             </div>
                         `
                     }
