inproved clarity, removed some test data

--- a/tools/simplytrain/templates/index.html
+++ b/tools/simplytrain/templates/index.html
@@ -16,6 +16,10 @@
             <input type="checkbox" id="swap">
             <label for="swap" class="swapthingy">Swap</label>
         </div>
+        <div class="infotext">
+            Default direction: English -> German <br>
+            Swapped direction: German -> English
+        </div>
 
         <form>
             <label style="color: white">
