--- a/tools/simplytrain/static/css/index.css
+++ b/tools/simplytrain/static/css/index.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: row;
 
-    font-family: serif, serif;
+    font-family: arial;
 }
 
 
@@ -75,7 +75,7 @@ body {
 
 .checkLabel {
     color: white;
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 .checkerBox {
@@ -123,7 +123,12 @@ body {
 }
 
 .swapthingy {
-    font-size: 1.5em;
+    font-size: 1.6em;
+    color: white;
+}
+
+.infotext {
+    font-size: 1.6em;
     color: white;
 }
 
